# sofie

./: .gitignore  BUGS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  KNOWN-ISSUES.md  MEMORY.md  PLAN.md  RESEARCH-NOTES.md  ROADMAP.md  SOLUTIONS.md
.cargo/: config.toml
crates/eleutheria-core/: Cargo.toml  build.rs
crates/eleutheria-core/src/: lib.rs  main.rs  session.rs
crates/eleutheria-core/src/bench/: filler.rs  harness.rs  mod.rs  probe.rs  report.rs  variant.rs
crates/eleutheria-core/src/bench/identity/: harness.rs  mod.rs  probe.rs  report.rs  variant.rs
crates/eleutheria-core/src/falcon_h1/: attention.rs  checkpoint.rs  config.rs  layer.rs  mixer.rs  mod.rs  model.rs  norm.rs  state.rs
crates/eleutheria-core/src/prompt/: mod.rs  pipeline.rs  types.rs
crates/eleutheria-core/src/prompt/stages/: chatml.rs  classifier.rs  conversation.rs  memory.rs  mod.rs  persona.rs  quality.rs  template.rs
crates/eleutheria-core/src/training/: adamw_state.rs  best_snapshot.rs  checkpoint.rs  clip.rs  core_memory.rs  core_memory_io.rs  dataset.rs  loss.rs  lr_schedule.rs  mod.rs  optim_io.rs  repro.rs  smoke.rs  trace.rs  train.rs
dataset/: smoke_corpus.txt
dataset/bench_results/: bench_alpha20.json  bench_alpha20.md  qual_test_alpha20.md
dataset/reasoning_chains/law/: MANIFEST.json  (+44 more)
dataset/scripts/: build_law_pack.py  build_programming_pack.py
dataset/training/: law_pack.txt  programming_pack.txt  sofie_identity_pack.txt
persona/: sofie.toml
scripts/: detect-cuda.sh
scripts/cloud/: README.md  sync_back.sh  vast_setup.sh  vast_train.sh  vast_train_7b.sh
(+80 files in other folders)
