[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.5.0-alpha.2"
edition = "2024"
authors = ["Ondřej Lomský <ondrej@lomsky.net>", "Sofie"]
license = "MIT"
repository = "https://github.com/lomsky/eleutheria"

[workspace.dependencies]
# Candle ML
candle-core = { git = "https://github.com/huggingface/candle" }
candle-nn = { git = "https://github.com/huggingface/candle" }
candle-transformers = { git = "https://github.com/huggingface/candle" }

# Tokenization & Model Hub
tokenizers = "0.21"
hf-hub = "0.4"

# Utils
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
